fixed the footer covering Main Section elements whenever the option to scroll down was available. Added a static property to the header as well as made sure to remove it once the browser went to mobile size. Made sure it wouldn't cover any elements as the footer used to

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,13 +11,20 @@
 
 
 body{
+    /* position: relative; */
+    padding-top: 100px;
+    padding-bottom: 100px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     background-image: url('../images/papyrus.png');
     margin: 0;
+    height: 100%
 }
 
 header{
+    position: fixed;
+    top: 0;
+    width: 100%;
     background: #ffffff;
     border-bottom: 2px solid #cccccc;
     margin-bottom: 20px;
@@ -76,6 +83,7 @@ p{
     /* position: relative; */
     width: 960px;
     margin: auto;
+    /* margin-bottom: 300px; */
     background: #fff;
     padding: 30px 20px 20px;
 }
@@ -198,8 +206,15 @@ footer{
 }
 
 @media screen and (max-width: 640px){
-    .menu{
+    body{
+        padding-top: 0;
+    }
+    header{
         position: static;
+        top: 0;
+    }
+    .menu{
+        /* position: static; */
         width: 100%;
     }
     
